--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "files.associations": {
     "time.h": "c",
-    "todo_api.h": "c"
+    "todo_api.h": "c",
+    "windows.h": "c",
+    "winnetwk.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
